fixed style for overall elements alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
+    opacity: 0.9;
 }
 
 .container{
@@ -80,7 +81,7 @@
 }
 
 .card-container {
-    height: 100%;
+    height: 100vh;
     display: flex;
     margin-top: 20px;
     gap: 10px;
